poll-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-deployment
  labels:
    app: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poll
  template:
    metadata:
      name: poll-deployment
      labels:
        app: poll
    spec:
      containers:
        - name: poll
          image: kaos-poll
          imagePullPolicy: Never
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: poll-service
spec:
  selector:
    app: poll
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
